Update index.html urls

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <meta name="author" content="Mohammed Ajmal Khan  &lt;dev.ajmalkhan@gmail.com&gt;" />
     <title>ÉTOILARA | ZOHA KHAN</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -48,10 +48,10 @@
     </nav>
     <div class="sidenav">
         <div class="menu-item">
-            <p data-url="/">HOME</p>
+            <p data-url="">HOME</p>
         </div>
         <div class="menu-item">
-            <p data-url="/clothing.html">CLOTHING  <i class="fa-solid fa-arrow-right"></i></p>
+            <p data-url="clothing.html">CLOTHING  <i class="fa-solid fa-arrow-right"></i></p>
            
         </div>
         <div class="menu-item">
@@ -122,8 +122,8 @@
         <!-- //new-arrivals End Here -->
         
         <div class="overlaying-img-container">
-            <img src="./assets/products/IMG_111.jpg" alt="">
-            <img src="./assets/products/IMG_112.jpg" alt="">
+            <img src="assets/products/IMG_111.jpg" alt="">
+            <img src="assets/products/IMG_112.jpg" alt="">
         </div>
         <!-- //.overlaying-img-container  -->
         <section class="categories">
