Update clothing.html url

--- a/clothing.html
+++ b/clothing.html
@@ -24,7 +24,7 @@
             </label>
         </div>
         <!-- //menu-icon -->
-        <div class="logo">
+        <div class="logo" >
             <h1><a href="">ÉTOILARA</a></h1>
         </div>
         
@@ -48,7 +48,7 @@
     </nav>
     <div class="sidenav">
          <div class="menu-item">
-            <p data-url="">HOME</p>
+            <p data-url="index.html">HOME</p>
         </div>
         <div class="menu-item">
             <p data-url="clothing.html">CLOTHING  <i class="fa-solid fa-arrow-right"></i></p>
