--- a/clothing.html
+++ b/clothing.html
@@ -25,7 +25,7 @@
         </div>
         <!-- //menu-icon -->
         <div class="logo" >
-            <h1><a href="">ÉTOILARA</a></h1>
+            <h1><a href="index.html">ÉTOILARA</a></h1>
         </div>
         
         <div class="icons">
@@ -48,7 +48,7 @@
     </nav>
     <div class="sidenav">
          <div class="menu-item">
-            <p data-url="index.html">HOME</p>
+            <p data-url="./index.html">HOME</p>
         </div>
         <div class="menu-item">
             <p data-url="clothing.html">CLOTHING  <i class="fa-solid fa-arrow-right"></i></p>
