Update clothing.html url

--- a/clothing.html
+++ b/clothing.html
@@ -25,7 +25,7 @@
         </div>
         <!-- //menu-icon -->
         <div class="logo" >
-            <h1><a href="index.html">ÉTOILARA</a></h1>
+            <h1><a href="./index.html">ÉTOILARA</a></h1>
         </div>
         
         <div class="icons">
