--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <!-- //menu-icon -->
         <div class="logo">
-            <h1><a href="./index.html">ÉTOILARA</a></h1>
+            <a href="./index.html"><img src="assets/logo.png" alt=""></a>
         </div>
         
         <div class="icons">
@@ -58,7 +58,7 @@
             <p>NEW ARRIVALS  <i class="fa-solid fa-arrow-right"></i></p>
         </div>
         <div class="menu-item">
-            <p>HIJAABS  <i class="fa-solid fa-arrow-right" ></i></p>
+            <p data-url="hijabs.html">HIJAABS  <i class="fa-solid fa-arrow-right" ></i></p>
         </div>
         <div class="menu-item">
             <p>ABAYAS  <i class="fa-solid fa-arrow-right"></i></p>
@@ -159,7 +159,7 @@
     </main>
     
      <footer>
-        <h1>ÉTOILARA</h1>
+        <img src="assets/logo_footer.png" alt="">
 
         <div class="footer-links">
             <ul>
