--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <!-- //menu-icon -->
         <div class="logo">
-            <a href="./index.html"><img src="assets/logo.png" alt=""></a>
+            <a href="./index.html"><h1>ÉTOILARA</h1></a>
         </div>
         
         <div class="icons">
@@ -159,7 +159,7 @@
     </main>
     
      <footer>
-        <img src="assets/logo_footer.png" alt="">
+        <h1><a href="./index.html">ÉTOILARA</a></h1>
 
         <div class="footer-links">
             <ul>
