connected abayas.html with other pages

--- a/abayas.html
+++ b/abayas.html
@@ -61,7 +61,7 @@
             <p data-url="hijabs.html">HIJAABS  <i class="fa-solid fa-arrow-right" ></i></p>
         </div>
         <div class="menu-item">
-            <p>ABAYAS  <i class="fa-solid fa-arrow-right"></i></p>
+            <p data-url="abayas.html">ABAYAS  <i class="fa-solid fa-arrow-right"></i></p>
         </div>
         <div class="menu-item">
             <p>ACCESSORIES  <i class="fa-solid fa-arrow-right"></i></p>
