--- a/abayas.html
+++ b/abayas.html
@@ -231,7 +231,7 @@
         </div>
         
         <div class="copyrights">
-            <p>&copy; 2024 Crad Craft</p>
+            <p>&copy; 2024 ETOILARA</p>
             <p>Terms</p>
             <p>Privacy</p>
             <p>Cookies</p>
